--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@metamask/providers": "^8.1.1",
+    "axios": "^0.27.2",
     "ethers": "^5.6.8",
     "next": "12.1.6",
     "react": "18.1.0",
