--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@hapi/boom": "^10.0.0",
     "@mysql/xdevapi": "8.0.29",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
